// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea matches snapshot for error: wrapperErrorText mount 1`] = `
.glamor-1,
[data-glamor-1] {
  margin-bottom: 0;
}

.glamor-0,
[data-glamor-0] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571429;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.glamor-7,
[data-glamor-7] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
  margin-bottom: 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.glamor-7:after,
[data-glamor-7]:after {
  content: '';
  display: table;
  clear: both;
}

.glamor-3,
[data-glamor-3] {
  display: block;
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 14px;
  line-height: 1.1428571429;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  font-family: "nta", Arial, sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 4px solid #b10e1e;
}

.glamor-6:focus,
[data-glamor-6]:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 16px;
    line-height: 1.25;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-7,
  [data-glamor-7] {
    max-width: 960px;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-3,
  [data-glamor-3] {
    font-size: 16px;
    line-height: 1.25;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-6,
  [data-glamor-6] {
    font-size: 19px;
    width: 75%;
  }
}

<glamorous(TextArea)
  errorText="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <TextArea
    className="glamor-1"
    errorText="example"
    input={Object {}}
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <glamorous(Label)
      className="glamor-1"
      error="example"
    >
      <Label
        className="glamor-1"
        error="example"
      >
        <glamorous(label)
          className="glamor-1"
          error="example"
        >
          <label
            className="glamor-7"
          >
            <glamorous(LabelText)>
              <LabelText
                className="glamor-1"
              >
                <glamorous(span)
                  className="glamor-1"
                >
                  <span
                    className="glamor-0"
                  >
                    example
                  </span>
                </glamorous(span)>
              </LabelText>
            </glamorous(LabelText)>
            <glamorous(ErrorText)>
              <ErrorText
                className="glamor-1"
              >
                <glamorous(span)
                  className="glamor-1"
                >
                  <span
                    className="glamor-3"
                  >
                    example
                  </span>
                </glamorous(span)>
              </ErrorText>
            </glamorous(ErrorText)>
            <glamorous(textarea)
              error="example"
              rows="5"
              type="text"
            >
              <textarea
                className="glamor-6"
                rows="5"
              />
            </glamorous(textarea)>
          </label>
        </glamorous(label)>
      </Label>
    </glamorous(Label)>
  </TextArea>
</glamorous(TextArea)>
`;

exports[`Textarea matches snapshot for hint: wrapperHint mount 1`] = `
.glamor-1,
[data-glamor-1] {
  margin-bottom: 0;
}

.glamor-7,
[data-glamor-7] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.glamor-7:after,
[data-glamor-7]:after {
  content: '';
  display: table;
  clear: both;
}

.glamor-0,
[data-glamor-0] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571429;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  font-family: "nta", Arial, sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

.glamor-6:focus,
[data-glamor-6]:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.glamor-3,
[data-glamor-3] {
  display: block;
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 14px;
  line-height: 1.1428571429;
  color: #6f777b;
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-7,
  [data-glamor-7] {
    max-width: 960px;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 16px;
    line-height: 1.25;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-6,
  [data-glamor-6] {
    font-size: 19px;
    width: 75%;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-3,
  [data-glamor-3] {
    font-size: 16px;
    line-height: 1.25;
    margin-bottom: 0;
  }
}

<glamorous(TextArea)
  hint="example"
>
  <TextArea
    className="glamor-1"
    hint="example"
    input={Object {}}
    meta={Object {}}
  >
    <glamorous(Label)
      className="glamor-1"
    >
      <Label
        className="glamor-1"
      >
        <glamorous(label)
          className="glamor-1"
        >
          <label
            className="glamor-7"
          >
            <glamorous(LabelText)>
              <LabelText
                className="glamor-1"
              >
                <glamorous(span)
                  className="glamor-1"
                >
                  <span
                    className="glamor-0"
                  >
                    example
                  </span>
                </glamorous(span)>
              </LabelText>
            </glamorous(LabelText)>
            <glamorous(HintText)>
              <HintText
                className="glamor-1"
              >
                <glamorous(span)
                  className="glamor-1"
                >
                  <span
                    className="glamor-3"
                  >
                    example
                  </span>
                </glamorous(span)>
              </HintText>
            </glamorous(HintText)>
            <glamorous(textarea)
              rows="5"
              type="text"
            >
              <textarea
                className="glamor-6"
                rows="5"
              />
            </glamorous(textarea)>
          </label>
        </glamorous(label)>
      </Label>
    </glamorous(Label)>
  </TextArea>
</glamorous(TextArea)>
`;

exports[`Textarea matches wrapper snapshot: wrapper mount 1`] = `
.glamor-1,
[data-glamor-1] {
  margin-bottom: 0;
}

.glamor-4,
[data-glamor-4] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.glamor-4:after,
[data-glamor-4]:after {
  content: '';
  display: table;
  clear: both;
}

.glamor-0,
[data-glamor-0] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571429;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  font-family: "nta", Arial, sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

.glamor-3:focus,
[data-glamor-3]:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-4,
  [data-glamor-4] {
    max-width: 960px;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 16px;
    line-height: 1.25;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-3,
  [data-glamor-3] {
    font-size: 19px;
    width: 75%;
  }
}

<glamorous(TextArea)>
  <TextArea
    className="glamor-1"
    input={Object {}}
    meta={Object {}}
  >
    <glamorous(Label)
      className="glamor-1"
    >
      <Label
        className="glamor-1"
      >
        <glamorous(label)
          className="glamor-1"
        >
          <label
            className="glamor-4"
          >
            <glamorous(LabelText)>
              <LabelText
                className="glamor-1"
              >
                <glamorous(span)
                  className="glamor-1"
                >
                  <span
                    className="glamor-0"
                  >
                    example
                  </span>
                </glamorous(span)>
              </LabelText>
            </glamorous(LabelText)>
            <glamorous(textarea)
              rows="5"
              type="text"
            >
              <textarea
                className="glamor-3"
                rows="5"
              />
            </glamorous(textarea)>
          </label>
        </glamorous(label)>
      </Label>
    </glamorous(Label)>
  </TextArea>
</glamorous(TextArea)>
`;
